--- a/MVVM/app/build.gradle
+++ b/MVVM/app/build.gradle
@@ -11,6 +11,8 @@ android {
         versionCode 1
         versionName "1.0"
 
+        buildConfigField("String","BASE_URL","\"https://tq-notes-api-jkrgrdggbq-el.a.run.app/\"")
+        buildConfigField("String","API_KEY",API_KEY)
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
