--- a/MVVM/gradle.properties
+++ b/MVVM/gradle.properties
@@ -17,4 +17,5 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+API_KEY = "502ce39b-2565-4b32-8257-a2cc20e44468"
 
